gcc/testsuite/algol68/compile/error-string-break-7.a68
begin puts ("'") # { dg-error "" }  #
end
